--- a/assets/styles.less
+++ b/assets/styles.less
@@ -361,9 +361,8 @@ img.logo {
 	background-image:url(images/Elliv_checkIcon_border.png);
 	background-repeat:no-repeat;
 	background-position:center center;
-    &:hover {
-        background-image:url(images/Elliv_checkIcon_transparent.png);
-    }
+    &:hover { background-image:url(images/Elliv_checkIcon_transparent.png); }
+    &:active { background-image: url(images/Elliv_checkIcon_filled.png); }
 }
 
 .nominee_photo {
