Further tweaks after another test session.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -559,14 +559,14 @@ p .scrollDown {
   .nav {
     box-shadow: border-box;
     margin: auto;
-    width: 80%;
+    width: 90%;
     padding-top: 10%;
     padding-bottom: 10%;
     padding-left: 0%;
     position: inherit;
   }
   .nav_arrow {
-    margin: 0;
+    margin-top: 4px;
     padding: 0;
   }
   .nav_button a {
@@ -591,7 +591,7 @@ p .scrollDown {
     padding: 30px 10px;
   }
   .nominee_photo {
-    height: auto;
+    height: 100%;
   }
   p {
     font-size: 1.6em;
