--- a/assets/styles.less
+++ b/assets/styles.less
@@ -561,7 +561,7 @@ p {
         box-shadow: border-box;
         margin: auto;
         
-        width: 80%;
+        width: 90%;
         padding-top: 10%;
         padding-bottom: 10%;
         padding-left: 0%;
@@ -569,7 +569,7 @@ p {
     }
     
     .nav_arrow {
-        margin: 0;
+        margin-top:4px;
         padding: 0;
     }
     
@@ -597,7 +597,7 @@ p {
         padding:30px 10px;
     }
     
-    .nominee_photo { height:auto; }
+    .nominee_photo { height:100%; }
     
     p {
         font-size: 1.6em;
