--- a/assets/styles.less
+++ b/assets/styles.less
@@ -21,6 +21,20 @@ a {
     text-align: center;
 }
 
+.admin {
+    
+    .back-to-poll { position: absolute; left:10px; top:10px; }
+    .option {
+        clear:both; list-style:none;
+        &:after { clear:both; content:""; display:block; }
+        .option-label { float:left; width:300px; }
+        .votes { float:left; width:800px; border:1px solid black; height:20px; margin-bottom:40px; }
+        .vote-bar { height:100%; background-color: grey; }
+        .vote-info { font-size:1.3em; margin:0; } 
+    }
+    .reset-ballot { position: absolute; right:10px; top:10px; }
+}
+
 .award {
     display: block;
     position: relative;
